# godot-ai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/godot-ai/: skill.md
.github/: dependabot.yml
.github/workflows/: bump-and-release.yml  ci.yml  close-issues-on-beta-merge.yml  release.yml
docs/: CONTRIBUTING.md  STRESS_TESTING.md  TOOLS.md  implementation-plan.md  plugin-architecture.md  port-conflicts.md  testing-strategy.md
plugin/addons/godot_ai/: connection.gd  mcp_dock.gd  plugin.cfg  plugin.gd
plugin/addons/godot_ai/debugger/: mcp_debugger_plugin.gd
plugin/addons/godot_ai/handlers/: editor_handler.gd  script_handler.gd  tilemap_handler.gd  tileset_handler.gd
plugin/addons/godot_ai/runtime/: editor_logger.gd  game_helper.gd  game_logger.gd
plugin/addons/godot_ai/utils/: server_lifecycle.gd  update_manager.gd
script/: _dev_env.py  ci-check-gdscript  ci-game-capture-smoke  ci-reload-test  local-self-update-smoke  serve-this-worktree  serve_worktree.py  stormtest.py  verify-worktree
src/godot_ai/: __init__.py  orphan_reaper.py  server.py  telemetry.py
src/godot_ai/godot_client/: client.py  session_diagnostics.py
src/godot_ai/handlers/: _readiness.py  editor.py  project.py  tilemap.py  tileset.py
src/godot_ai/protocol/: envelope.py  errors.py
src/godot_ai/resources/: __init__.py  project.py  sessions.py
src/godot_ai/runtime/: direct.py
src/godot_ai/sessions/: registry.py
src/godot_ai/tools/: __init__.py  _meta_tool.py  domains.py  editor.py  game.py  input_map.py  node.py  project.py  scene.py  testing.py  tilemap.py  tileset.py
src/godot_ai/transport/: websocket.py
test_project/: project.godot
test_project/tests/: mcp_derived_resource_fixture.gd  mcp_derived_resource_fixture.gd.uid  mcp_init_arg_fixture.gd  mcp_init_arg_fixture.gd.uid  mcp_non_tool_resource_fixture.gd  mcp_non_tool_resource_fixture.gd.uid  mcp_resource_fixture.gd  mcp_resource_fixture.gd.uid  mcp_tool_node_fixture.gd  mcp_tool_node_fixture.gd.uid  test_cli_exec.gd  test_client_refresh_state.gd  test_clients.gd  test_dispatcher.gd  test_dock.gd  test_editor.gd  test_game_eval_errors.gd  test_game_helper.gd  test_input.gd  test_log_buffer.gd  test_material.gd  test_node.gd  test_plugin_lifecycle.gd  test_plugin_telemetry.gd  test_project.gd  test_resource.gd  test_runner.gd  test_scene.gd  test_script.gd  test_server_lifecycle.gd  test_settings.gd  test_settings.gd.uid  test_telemetry_toggle.gd  test_tilemap.gd  test_tilemap.gd.uid  test_tileset_atlas.gd  test_tileset_atlas.gd.uid  test_update_manager.gd
tests/: conftest.py
tests/integration/: test_mcp_resources.py  test_mcp_tools.py  test_orphan_reaper_subprocess.py  test_pagination.py  test_websocket.py
tests/unit/: test_cli_reload.py  test_dev_env.py  test_dock_cli_timeout.py  test_editor_focus_refocus.py  test_editor_state_mixed_state.py  test_error_code_parity.py  test_game_eval.py  test_game_helper_no_editor_interface_identifier.py  test_game_logger_no_class_name_lookup.py  test_godot_client_circuit_breaker.py  test_meta_tool.py  test_orphan_reaper.py  test_protocol.py  test_readiness.py  test_runtime_handlers.py  test_runtime_info.py  test_script_create_import_settle.py  test_telemetry_platform.py  test_tilemap_tileset_handlers.py  test_tileset_handler_properties.py  test_tool_domains.py  test_verify_worktree_link.py
